[package]
name = 'chord'
version = '0.1.0'
authors = ['Nick Platt <platt.nicholas@gmail.com>']
license = 'ISC'
edition = '2018'

[workspace]
members = [
  "chord-cli",
  "chord-rpc",
]

[dependencies]
chord-rpc = { path = "chord-rpc" }
env_logger = "0.6.0"
futures = "0.1.25"
http = "0.1.15"
log = "0.4.6"
prost-types = "0.4.0"
tokio = "0.1.15"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tower-grpc = { git = 'https://github.com/tower-rs/tower-grpc' }
tower-h2 = { git = 'https://github.com/tower-rs/tower-h2' }
tower-http = { git = 'https://github.com/tower-rs/tower-http' }
tower-util = { git = 'https://github.com/tower-rs/tower' }

[dev-dependencies]
proptest = "0.9.1"
