[package]
name = "chord-cli"
version = "0.1.0"
authors = ["Nick Platt <platt.nicholas@gmail.com>"]
edition = "2018"

[dependencies]
chord = { path = "../" }
chord-rpc = { path = "../chord-rpc" }
env_logger = "0.6.1"
futures = "0.1.25"
log = "0.4.6"
pretty_env_logger = "0.3.0"
prost-types = "0.5.0"
quicli = "0.4.0"
structopt = "0.2.15"
tokio = "0.1.16"
