[package]
name = "chord-rpc"
version = "0.1.0"
authors = ["Nick Platt <platt.nicholas@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-types = "0.4.0"
tower-grpc = { git = 'https://github.com/tower-rs/tower-grpc' }

[build-dependencies]
tower-grpc-build = { git = 'https://github.com/tower-rs/tower-grpc' }
